# ai_resume_fill_backend

./: .env.example  .gitignore  Dockerfile  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  debug_phase2.py  debug_screenshot.py  pyproject.toml  requirements.txt  test_detailed_integration.py  test_new_visual_analysis.py  test_phase2_cv_algorithms.py  test_phase4_structure_recognition.py  test_phase5_llm_integration.py  test_phase5_real_llm.py  test_unified_api_simplified.py  test_unified_visual_analysis_api.py  test_visual_analysis.py  test_visual_analysis_api.py
alembic/: env.py
alembic/versions/: abcd14f8fbc6_initial_migration_create_all_tables.py
app/: main.py
app/api/v1/: api.py  visual_analysis.py
app/config/: semantic_groups.json
app/core/: __init__.py  config.py  deps.py  security.py
app/db/: __init__.py  base.py  deps.py  init_db.py
app/models/: __init__.py  activation.py  resume.py  usage_log.py  user.py
app/schemas/: __init__.py  activation.py  api_models.py  matching.py  new_visual_analysis.py  resume.py  user.py  visual_analysis.py  visual_analysis_schemas.py
app/services/: __init__.py  activation_service.py  ai_service.py  form_field_extractor.py  form_filler_service.py  label_matching_service.py  matching_service.py  new_visual_analysis_service.py  resume_service.py  unified_visual_analysis_service.py  user_service.py  visual_llm_service.py
app/services/cv/: xy_cut.py  (+3 more)
docs/: 方案对比与技术决策.md
scripts/: fix_timezone_issue.sql  init_db.sql  init_migration.py  migrate_resume_structure.sql  test_api.py  test_stage1.py  test_stage2.py
(+22 files in other folders)
